docs: endpoint scalar working
