# cmd/api/outlines.go
@@ -21,7 +21,7 @@ import (
 //	@Param			offset	query		int						false	"Number of items to skip (pagination offset)"
 //	@Success		200		{object}	[]model.CourseOutline	"List of course outlines with pagination info"
 //	@Failure		404		{object}	ErrorResponse			"No course outlines found"
-//	@Router			/outlines [get]
+//	@Router			/v1/rest/outlines/all [get]
 func (app *application) getAllCourseOutlines(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -94,7 +94,7 @@ func (app *application) getAllCourseOutlines(w http.ResponseWriter, r *http.Requ
 // @Success		200		{array}		[]model.CourseOutline	"List of course outlines for the department"
 // @Failure		404		{object}	ErrorResponse			"Department not found or no courses available"
 // @Failure		500		{object}	ErrorResponse			"Internal server error"
-// @Router			/outlines/dept/{dept} [get]
+// @Router			/v1/rest/outlines/{dept} [get]
 func (app *application) getCourseOutlinesByDept(w http.ResponseWriter, r *http.Request) {
 	dept := r.PathValue("dept")
 	ctx := r.Context()
@@ -126,7 +126,7 @@ func (app *application) getCourseOutlinesByDept(w http.ResponseWriter, r *http.R
 // @Success		200		{object}	model.CourseOutline	"Course outline details"
 // @Failure		404		{object}	ErrorResponse		"Course not found"
 // @Failure		500		{object}	ErrorResponse		"Internal server error"
-// @Router			/outlines/dept/{dept}/number/{number} [get]
+// @Router			/v1/rest/outlines/{dept}/{number} [get]
 func (app *application) getCourseOutlinesByDeptAndNumber(w http.ResponseWriter, r *http.Request) {
 	dept := r.PathValue("dept")
 	number := r.PathValue("number")
